# AIEPhysicsEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
App/: Box.cpp  Box.h  CMakeLists.txt  Circle.cpp  Circle.h  CollisionInfo.h  ContactConstraint.cpp  ContactConstraint.h  EntryPoint.cpp  Example.cpp  Example.h  ImGuiStuff.cpp  ImGuiStuff.hpp  PhysicsObject.cpp  PhysicsObject.h  PhysicsScene.cpp  PhysicsScene.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Reflection.h  RigidBody.cpp  RigidBody.h  Serialiser.cpp  Serialiser.h
Engine/: CMakeLists.txt
Engine/SDL3/lib_debug/: SDL3.lib
Engine/src/: AppInfo.h  Application.h  ApplicationHarness.cpp  ApplicationHarness.h  Axis.h  Button.h  Colour.cpp  Colour.h  Graphics.h  Key.h  LineRenderer.cpp  LineRenderer.h  Maths.cpp  Maths.h  ShaderProgram.cpp  ShaderProgram.h  TextStream.cpp  TextStream.h  Utilities.cpp  Utilities.h  Vec2.cpp  Vec2.h
